style: (Update button background color) Changed button background color in title section for improved visibility and aesthetics. 🎨

--- a/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
+++ b/src/app/v2/modules/evaluaciones-proveedor/evaluaciones-proveedor.component.html
@@ -71,7 +71,7 @@
   }
   <!--sin login-->
   @if (authState() === AuthState.LoggedOut) {
-  <section class="relative overflow-hidden bg-white-50">
+  <section class="relative overflow-hidden">
     <app-title-section
       [title]="'Modelo de Caracterización de Proveedores'"
       [description]="
