--- a/src/app/v2/components/title-section/title-section.component.html
+++ b/src/app/v2/components/title-section/title-section.component.html
@@ -6,7 +6,7 @@
     <h2 class="hero-description">
       {{ description }}
     </h2>
-    <a [routerLink]="buttonLink" [href]="buttonLink" class="btn-primary-white">
+    <a [routerLink]="buttonLink" [href]="buttonLink" class="btn-primary-white bg-[#fbcc2c]">
       {{ buttonText }}
       <svg
         class="w-5 h-5 ml-2 -mr-1"
