--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -144,14 +144,15 @@
           ofrece para el desarrollo de la Región de Los Lagos.
         </p>
         <div class="text-center">
-          <a (click)="openLink('https://drive.google.com/file/d/1Ct-dBUZZ2nejjTZ7FNbhrLr45POtNnnN/view?usp=sharing')"
+            <a href="https://gestor.nuevoloslagos.org/informe.pdf" 
+             download="Informe-Industria40-LosLagos.pdf"
              class="inline-flex items-center px-8 py-4 bg-[rgb(234,179,8)] hover:bg-[rgb(234,179,8)]/90 
-                    transition-all duration-300  shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
             <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20">
               <path d="M12.293 9.293a1 1 0 011.414 0L17 12.586V4a1 1 0 112 0v10a1 1 0 01-1 1h-10a1 1 0 110-2h8.586l-3.293-3.293a1 1 0 010-1.414zM3 4a1 1 0 011-1h6a1 1 0 110 2H5v12h8a1 1 0 110 2H4a1 1 0 01-1-1V4z"/>
             </svg>
             Descargar Informe Completo
-          </a>
+            </a>
         </div>
       </div>
     </section>
