--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -7,7 +7,7 @@
     <!-- Header con diseño mejorado -->
    
       <div class="absolute -left-3 top-0 w-6 h-6 bg-[rgb(234,179,8)] "></div>
-      <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#fbcc2c] pb-4">Informe Industria 4.0 Los Lagos</h1>
+      <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#fbcc2c] pb-4">hola</h1>
 
       <p class="text-2xl text-gray-600 mt-6 leading-relaxed">
         Transformación digital y manufactura avanzada: Un análisis profundo del ecosistema regional y sus oportunidades de crecimiento
