--- a/src/app/v2/modules/informe/informe.component.html
+++ b/src/app/v2/modules/informe/informe.component.html
@@ -10,7 +10,7 @@
       <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#fbcc2c] pb-4">hola como estas cristian</h1>
 
       <p class="text-2xl text-gray-600 mt-6 leading-relaxed">
-        Transformación digital y manufactura avanzada: Un análisis profundo del ecosistema regional y sus oportunidades de crecimiento
+        Transformación digital y manufactura avanzada: Un análisis profundo  oportunidades de crecimiento
       </p>
 
 
